force-app/main/default/objects/Time__c/Time__c.object-meta.xml
<CustomObject>
    <label>Time</label>
    <nameField>
        <label>Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>