force-app/main/default/objects/Time__c/fields/Data_Fundacao__c.field-meta.xml
<CustomField>
    <fullName>Data_Fundacao__c</fullName>
    <label>Data Fundação</label>
    <required>true</required>
    <type>Date</type>
</CustomField>