force-app/main/default/objects/Time__c/fields/Escudo_IMG__c.field-meta.xml
<CustomField>
    <fullName>Escudo_IMG__c</fullName>
    <formula>IMAGE( Escudo_URL__c , &quot;Escudo&quot;, 200, 200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escudo</label>
    <type>Text</type>
</CustomField>