force-app/main/default/objects/Time__c/fields/Escudo_URL__c.field-meta.xml
<CustomField>
    <fullName>Escudo_URL__c</fullName>
    <label>Escudo URL</label>
    <type>Url</type>
</CustomField>