force-app/main/default/objects/Time__c/fields/Estadio__c.field-meta.xml
<CustomField>
    <fullName>Estadio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estádio</label>
    <referenceTo>Estadio__c</referenceTo>
    <relationshipLabel>Times</relationshipLabel>
    <relationshipName>Times</relationshipName>
    <type>Lookup</type>
</CustomField>