force-app/main/default/objects/Time__c/fields/Mascote_IMG__c.field-meta.xml
<CustomField>
    <fullName>Mascote_IMG__c</fullName>
    <formula>IMAGE( Mascote_URL__c, &quot;&quot;, 200, 200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mascote</label>
    <type>Text</type>
</CustomField>