force-app/main/default/objects/Time__c/fields/Mascote_URL__c.field-meta.xml
<CustomField>
    <fullName>Mascote_URL__c</fullName>
    <label>Mascote_URL</label>
    <type>Url</type>
</CustomField>