force-app/main/default/objects/Time__c/fields/Sigla__c.field-meta.xml
<CustomField>
    <fullName>Sigla__c</fullName>
    <label>Sigla Transmissão</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>